k8s/survey/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: "Always"
      containers:
        - name: redis
          image: redis:latest
          args: ["--save"]
          imagePullPolicy: "Always"
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "2"
              memory: "8Gi"
            requests:
              cpu: "2"
              memory: "8Gi"
