k8s/survey/survey_gunicorn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-gunicorn
spec:
  selector:
    matchLabels:
      app: survey-gunicorn
  replicas: 1
  template:
    metadata:
      labels:
        app: survey-gunicorn
    spec:
      restartPolicy: "Always"
      containers:
        - name: survey-gunicorn
          image: ghcr.io/janpf/niaa/general:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5000
          command: ["/bin/sh"]
          args: ["survey/webserver.sh"]
          livenessProbe:
            httpGet:
              path: /login
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 60
          resources:
            limits:
              cpu: "4"
              memory: "4Gi"
            requests:
              cpu: "4"
              memory: "4Gi"
          volumeMounts:
            - mountPath: /app
              name: code
            - mountPath: /data
              name: scratch
      volumes:
        - name: code
          cephfs:
            monitors:
              - 132.187.14.16,132.187.14.17,132.187.14.19,132.187.14.20
            user: studpfister
            path: "/home/stud/pfister/eclipse-workspace/NIAA"
            secretRef:
              name: studpfister-secret
        - name: scratch
          cephfs:
            monitors:
              - 132.187.14.16,132.187.14.17,132.187.14.19,132.187.14.20
            user: studpfister
            path: "/scratch/stud/pfister/NIAA/pexels"
            secretRef:
              name: studpfister-secret
