k8s/survey/survey_imagePreprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-imagepreprocessor
spec:
  selector:
    matchLabels:
      app: survey-imagepreprocessor
  replicas: 5
  template:
    metadata:
      labels:
        app: survey-imagepreprocessor
    spec:
      restartPolicy: "Always"
      containers:
        - name: survey-imagepreprocessor
          image: janpf/niaa:flask-latest
          imagePullPolicy: "Always"
          command: ["/bin/sh"]
          args: ["survey/imagePreprocessor.sh"]
          resources:
            limits:
              cpu: "2"
              memory: "2Gi"
            requests:
              cpu: "2"
              memory: "2Gi"
          volumeMounts:
            - mountPath: /app
              name: code
            - mountPath: /data
              name: scratch
      volumes:
        - name: code
          cephfs:
            monitors:
              - 132.187.14.16,132.187.14.17,132.187.14.19,132.187.14.20
            user: studpfister
            path: "/home/stud/pfister/eclipse-workspace/NIAA"
            secretRef:
              name: studpfister-secret
        - name: scratch
          cephfs:
            monitors:
              - 132.187.14.16,132.187.14.17,132.187.14.19,132.187.14.20
            user: studpfister
            path: "/scratch/stud/pfister/NIAA/pexels"
            secretRef:
              name: studpfister-secret
