k8s/survey/survey_dbMover_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey-dbMover
spec:
  selector:
    app: survey-dbMover
