k8s/survey/survey_gunicorn_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey-gunicorn
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: survey-gunicorn
