k8s/survey/survey_imagePreprocessor_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey-imagePreprocessor
spec:
  selector:
    app: survey-imagePreprocessor
